# PixelAudit

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  ROADMAP.md  Skills.md
include/pixelaudit/core/: pipeline.hpp  test_interface.hpp  types.hpp
include/pixelaudit/tests/: frequency_spectrum_test.hpp  gradient_pca_test.hpp  jpeg_forensics_test.hpp  latent_module_stub.hpp  optical_photometric_test.hpp  sensor_noise_prnu_test.hpp  vanishing_point_test.hpp
research/: deep-research-report.md
scripts/: calibrate_dataset.py  evaluate_audits.py  evaluate_dataset.py  export_hf_dataset.py  requirements.txt
src/audits/: frequency_spectrum_test.cpp  gradient_pca_test.cpp  jpeg_forensics_test.cpp  latent_module_stub.cpp  optical_photometric_test.cpp  sensor_noise_prnu_test.cpp  vanishing_point_test.cpp
src/cli/: main.cpp
src/core/: pipeline.cpp  types.cpp
tests/: frequency_audit_test.cpp  sensor_optical_audit_test.cpp  smoke_test.cpp  vanishing_audit_test.cpp
ui/: app.py
